@@ -38,6 +38,15 @@ $cvs = '/usr/bin/cvs';
 # use VSS (Visual Source Safe).
 $vss = 'C:/Program Files/Microsoft Visual Studio/Common/VSS/win32/vss.exe';
 
+# Temporary directory Codestriker can use.  For *NIX platforms, this will
+# /tmp by default, for Windows 2000 c:\winnt\temp and for XP, c:\windows\temp.
+# For Win32 deployments, these temp directories may not be accessible to
+# the user running IIS or Apache, so explicitly specify an apprioriate
+# directory here that exists on the system.  For *NIX platforms, there is
+# usually no need to do anything here.
+#$tmpdir = "/tmp/codestriker";
+#$tmpdir = "c:\temp";
+
 # If codestriker is installed differently to that described in the README file
 # (for example on the sourceforge servers), it may be necessary to explicitly
 # specify the location of the codestriker_css as a URL.
@@ -80,6 +89,7 @@ $bugtracker = '';
      'http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot',
      'svn:http://svn.collab.net/repos/svn/trunk',
      ':pserver:anonymous:password@cvs.sourceforge.net:/cvsroot',
+     ':pserver:sits:password@cvs.sourceforge.net:/cvsroot',
      'vss:localhost',
      ':local:c:\\cvsrep',
      'c:/cvsrep2',
